Bug 251655 - Fix bug in CSSCalcOperationNode::createHypot() found by new libcpp assertions
Summary: Fix bug in CSSCalcOperationNode::createHypot() found by new libcpp assertions
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-02 18:28 PST by Chris Dumez
Modified: 2023-02-03 07:28 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-02-02 18:28:51 PST
Fix bug in CSSCalcOperationNode::createHypot() found by new libcpp assertions.
Comment 1 Chris Dumez 2023-02-02 18:29:00 PST
<rdar://104981701>
Comment 2 Chris Dumez 2023-02-02 18:32:43 PST
Pull request: https://github.com/WebKit/WebKit/pull/9574
Comment 3 EWS 2023-02-03 07:28:56 PST
Committed 259814@main (a19262e5a43e): <https://commits.webkit.org/259814@main>

Reviewed commits have been landed. Closing PR #9574 and removing active labels.