Cherry-pick 259814@main (a19262e5a43e). https://bugs.webkit.org/show_bug.cgi?id=251655

Fix bug in CSSCalcOperationNode::createHypot() found by new libcpp assertions
    https://bugs.webkit.org/show_bug.cgi?id=251655
    rdar://104981701

    Reviewed by Ryosuke Niwa.

    fast/css/calc-parsing.html has been crashing on Internal bots since we enabled
    the new libcpp assertions. This was caused by CSSCalcOperationNode::createHypot()
    not checking if expectedCategory was std::nullopt before dereferencing it.

    * Source/WebCore/css/calc/CSSCalcOperationNode.cpp:
    (WebCore::CSSCalcOperationNode::createHypot):

    Canonical link: https://commits.webkit.org/259814@main